[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/square.png" type="Texture" id=1]
[ext_resource path="res://fonts/LargePixel.tres" type="Theme" id=2]
[ext_resource path="res://fonts/PixelLarge.tres" type="Theme" id=3]
[ext_resource path="res://Scene/ButtonHover.gd" type="Script" id=4]
[ext_resource path="res://Scene/Lang_Select.gd" type="Script" id=5]

[node name="Lang_Select" type="Node2D"]
script = ExtResource( 5 )

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 481.5, 268.5 )
scale = Vector2( 16.0167, 8.91667 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 350.0
margin_top = 103.0
margin_right = 749.0
margin_bottom = 223.0
theme = ExtResource( 2 )
text = "Language:"

[node name="English_Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = 199.0
margin_right = 601.0
margin_bottom = 288.0
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="English_Button"]
margin_right = 319.0
margin_bottom = 86.0
mouse_filter = 2
theme = ExtResource( 3 )
text = "English"

[node name="JP_Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = 307.0
margin_right = 601.0
margin_bottom = 396.0
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="JP_Button"]
margin_right = 197.0
margin_bottom = 86.0
mouse_filter = 2
theme = ExtResource( 3 )
text = "日本語"

[connection signal="mouse_entered" from="English_Button" to="English_Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="English_Button" to="English_Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="English_Button" to="." method="_on_English_Button_pressed"]
[connection signal="mouse_entered" from="JP_Button" to="JP_Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="JP_Button" to="JP_Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="JP_Button" to="." method="_on_JP_Button_pressed"]
