[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/BGs/adultGradient.png" type="Texture" id=1]
[ext_resource path="res://fonts/LargePixel.tres" type="Theme" id=2]
[ext_resource path="res://Scene/LanguageSwapper.gd" type="Script" id=3]
[ext_resource path="res://Scene/ButtonHover.gd" type="Script" id=4]
[ext_resource path="res://Scene/Tutorial/Tutorial.gd" type="Script" id=5]

[node name="Tutorial1" type="Node2D"]
script = ExtResource( 5 )
next_level = "res://Scene/Tutorial/Tutorial2.tscn"

[node name="Square" type="Sprite" parent="."]
position = Vector2( 477, 263 )
texture = ExtResource( 1 )
offset = Vector2( 0.971786, 5.77778 )

[node name="NextButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 680.0
margin_top = 467.0
margin_right = 898.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 0, -1 )
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="NextButton"]
margin_right = 258.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -1, 1 )
mouse_filter = 2
theme = ExtResource( 2 )
custom_colors/selection_color = Color( 1, 0.14902, 0.14902, 1 )
text = ">> 次へ"
script = ExtResource( 3 )
english_text = "Next"
JP_text = ">> 次へ"

[node name="Instructions" type="RichTextLabel" parent="."]
margin_left = 52.0
margin_top = 68.0
margin_right = 912.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( -1, 1 )
mouse_filter = 2
theme = ExtResource( 2 )
custom_colors/selection_color = Color( 1, 0.14902, 0.14902, 1 )
text = "In each level, you choose which items you want to take to your new home.
"
script = ExtResource( 3 )
english_text = "In each level, you choose which items you want to take to your new home.
"
JP_text = ">> 各章にて新しいお家に何を持って行きたいか決めます。
"

[connection signal="mouse_entered" from="NextButton" to="NextButton" method="_on_NextButton_mouse_entered"]
[connection signal="mouse_exited" from="NextButton" to="NextButton" method="_on_NextButton_mouse_exited"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
