extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _on_Button_mouse_entered():
	modulate = Color(255,227,0)
	pass # Replace with function body.


func _on_Button_mouse_exited():
	modulate = Color(1,1,1)
	pass # Replace with function body.


func _on_NextButton_mouse_entered():
	modulate = Color(255,227,0)
	pass # Replace with function body.


func _on_NextButton_mouse_exited():
	modulate = Color(1,1,1)
	pass # Replace with function body.

